# CNN-for-time-series-prediction

./: .gitignore  README.md  main.py  pyproject.toml  run_study.py  tune_tcn.py
results/: metrics.csv
src/: data.py  data_generator.py  metrics.py  models.py  random_walker.py  uncertainty.py
